# backend

./: LICENSE  README.md  pyproject.toml
image_matting/app/: trimap_generator_application.py
image_matting/modules/alpha_mask_generator/: alpha_mask_output_utils.py
image_matting/modules/alpha_mask_generator/deep_image_matting/: __init__.py  alpha_mask_generator.py  net.py  predictor.py
image_matting/modules/alpha_mask_generator/deep_image_matting/model/: stage1_skip_sad_52.9.pth
image_matting/modules/salient_object_detector/: saliency_output_utils.py  salient_object_detector_application.py  salient_object_detector_residual_application.py
image_matting/modules/salient_object_detector/U-2-Net/: salient_object_detector.py
image_matting/modules/salient_object_detector/spectral_residual_saliency_detection/: saliency.py
image_matting/modules/salient_object_detector/u2net/: __init__.py  u2_salient_object_detector.py
image_matting/modules/trimap_generator/: __init__.py  trimap.py  trimap_generator_application.py  trimap_output_utils.py
trimap_generator/: __init__.py  trimap.py  trimap_generator_application.py
web_server/: image_matting.py  uploader.py
