[tool.poetry]
name = "backend"
version = "0.1.0"
description = ""
authors = ["Georgi Genchev <gdgenchev97@gmail.com>", "Tsvetina Vasileva <tsvetinavasi@gmail.com>"]

[tool.poetry.dependencies]
python = "3.8"
torch = "^1.10.1"
environs = "^9.3.5"
numpy = "^1.21.5"
opencv-python = "^4.5.4"

[tool.poetry.dev-dependencies]

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
