[tool.poetry]
name = "backend"
version = "0.1.0"
description = ""
authors = ["Georgi Genchev <gdgenchev97@gmail.com>", "Tsvetina Vasileva <tsvetinavasi@gmail.com>"]

[tool.poetry.dependencies]
python = "3.8"
torch = "^1.10.1"
environs = "^9.3.5"
numpy = "^1.21.5"
opencv-python = "^4.5.4"
scikit-image = "^0.19.1"
torchvision = "^0.11.2"
matplotlib = "^3.5.1"
Flask = "^2.0.2"
Flask-Cors = "^3.0.10"
Flask-Uploads = "^0.2.1"
Flask-Dropzone = "^1.6.0"

[tool.poetry.dev-dependencies]

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
